--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: google-compute-image-packages
 Section: admin
 Priority: optional
 Maintainer: Google Cloud Team <gc-team@google.com>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 11),
                dh-python,
                dh-systemd (>= 1.5),
                python-all,
@@ -20,7 +20,8 @@ Homepage: https://github.com/GoogleCloudPlatform/compute-image-packages
 
 Package: google-compute-engine
 Architecture: all
-Depends: google-compute-engine-oslogin,
+Depends: ${misc:Depends},
+         google-compute-engine-oslogin,
          python:any,
          python3:any,
          ${python:Depends},
