--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ export PYBUILD_TEST_ARGS={dir}/google_compute_engine/
 export PYBUILD_SYSTEM=distutils
 
 %:
-	dh $@ --with python2,python3,systemd --buildsystem=pybuild
+	dh $@ --with python2,python3 --buildsystem=pybuild
 
 override_dh_systemd_start:
 	# Configured in google-compute-engine.postinst instead.
