Do not depend on a virtual package only
Give a real package alternative to system-log-daemon, in this case I used
the rsyslog that was already recommended.

--- a/debian/control
+++ b/debian/control
@@ -28,8 +28,8 @@ Depends: ${misc:Depends},
          ${misc:Depends},
          python-google-compute-engine (= ${source:Version}),
          python3-google-compute-engine (= ${source:Version}),
-         system-log-daemon,
-Recommends: google-cloud-sdk, rsyslog
+         rsyslog | system-log-daemon,
+Recommends: google-cloud-sdk
 Provides: irqbalance
 Conflicts: google-compute-engine-jessie,
            google-compute-engine-init-jessie,
