--- a/debian/control
+++ b/debian/control
@@ -28,23 +28,7 @@ Depends: ${misc:Depends},
          rsyslog | system-log-daemon,
 Recommends: google-cloud-sdk
 Provides: irqbalance
-Conflicts: google-compute-engine-jessie,
-           google-compute-engine-init-jessie,
-           google-config-jessie,
-           google-compute-engine-stretch,
-           google-compute-engine-init-stretch,
-           google-config-stretch,
-           google-compute-daemon,
-           google-startup-scripts,
-           irqbalance
-Replaces: google-compute-engine-jessie,
-          google-compute-engine-init-jessie,
-          google-config-jessie,
-          google-compute-engine-stretch,
-          google-compute-engine-init-stretch,
-          google-config-stretch,
-          google-compute-daemon,
-          google-startup-scripts
+Conflicts: irqbalance
 Description: Google Compute Engine guest environment
  This package contains scripts, configuration, and systemd init files for
  features specific to the Google Compute Engine cloud environment. It manages
@@ -58,10 +42,6 @@ Depends: ${python:Depends}, ${misc:Depends},
          python-distro | python-distro-info,
          python-boto,
          python-pkg-resources,
-Conflicts: google-compute-engine-jessie,
-           google-compute-engine-stretch,
-           google-compute-daemon,
-           google-startup-scripts
 Description: Google Compute Engine Python 2.x library
  Python 2.x library used to setup and manage resources in Google Compute
  Engine guests machines in a cloud environment. It manages accounts, clock
@@ -74,10 +54,6 @@ Depends: ${python3:Depends}, ${misc:Depends},
          python3-distro | python3-distro-info,
          python3-boto,
          python3-pkg-resources,
-Conflicts: google-compute-engine-jessie,
-           google-compute-engine-stretch,
-           google-compute-daemon,
-           google-startup-scripts
 Description: Google Compute Engine Python 3.x library
  Python 3.x library used to setup and manage resources in Google Compute
  Engine guests machines in a cloud environment. It manages accounts, clock
